deleted index.css, fixed up spacing on home

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -430,7 +430,7 @@ body, html {
 }
 
 .bottom-container {
-    margin-top: 4%;
+    margin-top: 85%;
     opacity: 1;
 }
 
